welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: not found: value flag
  flag = 0
  ^golomb:7: error: not found: value flag
    for (j <- flag to (flag+nb)) {
              ^golomb:7: error: not found: value flag
    for (j <- flag to (flag+nb)) {
                       ^golomb:10: error: not found: value flag
    flag = tab(k)
    ^golomb:5: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 0 to 2) {
         ^